# python-project

./: .gitignore  DockerAWS  Dockerfile  Makefile  README.md  docker-compose-test.yaml  pyproject.toml  run_jobs.py  settings.py
common/: utils.py
tests/shared/helpers/: comparisons.py  yaml.py
tests/system/: Dockerfile
tests/system/features/: event_handler.feature
tests/system/steps/: whens.py
tests/unit/: Dockerfile  fixtures.py  pytest.cfg  test_all.py
tests/unit/features/common/utils/: offset_datetime_strftime.feature
tests/unit/steps/: givens.py  thens.py  whens.py
